[package]
name = "cdn-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
once_cell = "1.19"
futures-util = "0.3"
mime = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rand = "0.8"
regex = "1"

# БД
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# HTTP-клиент
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "stream", "json"] }

# Работа с изображениями
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "tiff", "webp"] }
fast_image_resize = { version = "5", default-features = false, features = ["image"] }
mozjpeg = { version = "0.10", default-features = false, features = ["with_simd"] }

# OpenAPI/Swagger
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

# Логи
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

num_cpus = "1.17.0"
